# folk-music-recommender

./: .gitignore  .secrets.baseline  .venv  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  constraints.txt
docs/: project_specific_setup.md  using_poetry.md
folk/: __init__.py
tests/: test_folk.py
